--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andriy-lik.github.io/project-healthy-hub/",
+  "homepage": "https://goitstudentsworks.github.io/fs-76-5-react-node-healthy-hub/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
